--- a/.github/release.yml
+++ b/.github/release.yml
@@ -6,9 +6,12 @@ changelog:
     - title: Breaking Changes 🛠
       labels:
         - breaking-change
-    - title: Exciting New Features 🎉
+    - title: New Features 🎉
       labels:
         - enhancement
+    - title: Bug Fixes 🐛
+      labels:
+        - bug
     - title: Other Changes
       labels:
         - "*"
