Add test task to deno.jsonc

--- a/deno.jsonc
+++ b/deno.jsonc
@@ -1,4 +1,7 @@
 {
   "lock": false,
-  "importMap": "./import_map.json"
+  "importMap": "./import_map.json",
+  "tasks": {
+    "test": "deno test --allow-read --allow-write --allow-run"
+  }
 }
