--- a/.github/workflows/udd-update-dependencies.yml
+++ b/.github/workflows/udd-update-dependencies.yml
@@ -13,7 +13,7 @@ jobs:
           deno-version: v1.x
       - name: Update dependencies
         run: |
-          deno run -A https://deno.land/x/udd/main.ts import_map.json deps.ts dev_deps.ts
+          deno run -A https://deno.land/x/udd/main.ts import_map.json deps.ts dev_deps.ts examples/**/import_map.json
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v3
         id: pr
